--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "koa": "^2.13.1"
   }
 }
