--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
-    "serve": "nodemon --watch src/**/* -e ts,tsx --exec ts-node ./src/index.ts"
+    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node ./src/index.ts"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@types/express": "^4.17.11",
     "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
@@ -62,6 +63,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
