--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@types/ioredis": "^4.22.1",
     "@types/express": "^4.17.11",
     "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
@@ -64,12 +65,12 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "ioredis": "^4.24.4",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-onerror": "^4.1.0",
     "koa-router": "^10.0.0",
-    "mysql": "^2.18.1",
-    "redis": "^3.0.2"
+    "mysql": "^2.18.1"
   }
 }
