--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "name": "nodemon",
+            "program": "${workspaceFolder}/src/index.ts",
             "request": "launch",
-            "name": "Launch Program",
-            /* "skipFiles": [
-                "<node_internals>/**"
-            ], */
-            "program": "${workspaceFolder}/src/index.ts"
+            "restart": true,
+            "runtimeExecutable": "nodemon",
+            "skipFiles": [
+                // "<node_internals>/**"
+            ],
+            "type": "pwa-node"
         }
     ]
 }
