--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.22.1",
     "@types/koa": "^2.13.1",
@@ -62,6 +63,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "ioredis": "^4.24.4",
     "koa": "^2.13.1",
