--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "debugger": "node --inspect ./src/test.js",
     "start": "tsc && node dist/index.js",
-    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node ./src/index.ts"
+    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node ./src/index.ts",
+    "test": "jest"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -45,6 +46,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.22.1",
+    "@types/jest": "^26.0.23",
     "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-logger": "^3.1.1",
@@ -60,6 +62,7 @@
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "ts-jest": "^27.0.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
