--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.13.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "ioredis": "^4.24.4",
