--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
+    "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.22.1",
@@ -68,7 +69,9 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.13.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "ioredis": "^4.24.4",
     "koa": "^2.13.1",
